# clojure-type-analyzer

analyzer/: Cargo.toml
analyzer/src/: expression.rs  lib.rs
analyzer/tests/: test_with_actual_code.rs
clojure-analyzer-cli/: Cargo.toml
clojure-analyzer-cli/src/: main.rs
examples/: handler.clj  simple-source-for-analyzer.clj
lexer/: Cargo.toml
lexer/src/: lib.rs  token.rs
lexer/tests/: tokenize.rs
location/: Cargo.toml
location/src/: lib.rs
parser/: Cargo.toml
parser/src/: ast.rs  lib.rs
parser/tests/: check_roughly_with_actual_source_code.rs
picktok/lib/: Cargo.toml
picktok/lib/src/: alt.rs  lib.rs  permutation.rs  tuple.rs
picktok/lib/tests/: tests.rs
picktok/macros/: Cargo.toml
picktok/macros/src/: lib.rs
semantic_parser/: Cargo.toml
semantic_parser/src/: lib.rs  semantic_ast.rs
semantic_parser/tests/: check_roughly_with_actual_source_code.rs
token_combinator/lib/: Cargo.toml
token_combinator/lib/src/: alt.rs  lib.rs  permutation.rs  tuple.rs
token_combinator/lib/tests/: tests.rs
token_combinator/macros/: Cargo.toml
token_combinator/macros/src/: lib.rs
