[package]
name = "analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
semantic_parser = { path = "../semantic_parser" }
location = { path  = "../location" }
enum-kinds-macros = "0.2.1"
derive_is_enum_variant = "0.1.1"
lexer = { path =  "../lexer" }
parser = { path = "../parser" }