[package]
name = "clojure-analyzer-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
location = { path = "../location" }
lexer = { path = "../lexer" }
parser = { path = "../parser" }
semantic_parser = { path = "../semantic_parser" }
analyzer = { path = "../analyzer" }
anyhow = "1.0.69"
