[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = {version = "7.1.2", features = ["alloc"]}
thiserror = "1.0.38"
nom-greedyerror = "0.4.0"
lexer = {path = "../lexer"}
location = { path = "../location" }
token_combinator = {path = "../token_combinator/lib"}