[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.38"
lexer = {path = "../lexer"}
location = { path = "../location" }
picktok = { git = "https://github.com/wizlite/picktok", branch = "main" }
paste = "1.0.11"
