[package]
name = "clj-analyzer_semantic_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = {version = "7.1.2", features = ["alloc"]}
nom_locate = "4.0.0"
thiserror = "1.0.38"
nom-greedyerror = "0.4.0"
parser = {path = "../parser"}
location = { path = "../location" }
token_combinator = { path = "../token_combinator/lib" }
anyhow = "1.0.69"
paste = "1.0.11"
