[package]
name = "semantic_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.38"
parser = {path = "../parser"}
location = { path = "../location" }
token_combinator = { path = "../token_combinator/lib" }
anyhow = "1.0.69"
paste = "1.0.11"
lexer = { path = "../lexer" }

